<resources>
    <string name="app_name">课表</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Tresday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="right">&gt;</string>
    <string name="left">&lt;</string>
    <string name="add">+</string>
    <string name="reduce">-</string>
    <string name="hiddle_class">隐藏的课</string>
    <string name="textview6">这是第？周</string>
    <string name="affrim">确认</string>
    <string name="clear">清空</string>

</resources>