<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tresday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/button42"
        app:layout_constraintStart_toStartOf="@+id/button42" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/button52"
        app:layout_constraintStart_toEndOf="@+id/button42" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toStartOf="@+id/button42"
        app:layout_constraintStart_toEndOf="@+id/button22" />

    <Button
        android:id="@+id/button44"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button34"
        app:layout_constraintTop_toTopOf="@+id/button34" />

    <Button
        android:id="@+id/button43"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toTopOf="@+id/button33" />

    <Button
        android:id="@+id/button41"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toTopOf="@+id/button31" />

    <Button
        android:id="@+id/button33"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button32"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button23"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintTop_toTopOf="@+id/button33" />

    <Button
        android:id="@+id/button24"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button34"
        app:layout_constraintTop_toTopOf="@+id/button34" />

    <Button
        android:id="@+id/button14"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintTop_toTopOf="@+id/button24" />

    <Button
        android:id="@+id/button35"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button34"
        app:layout_constraintTop_toBottomOf="@+id/button34" />

    <Button
        android:id="@+id/button34"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button33"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button45"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button35"
        app:layout_constraintTop_toTopOf="@+id/button35" />

    <Button
        android:id="@+id/button55"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button45"
        app:layout_constraintTop_toTopOf="@+id/button45" />

    <Button
        android:id="@+id/button54"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button44"
        app:layout_constraintTop_toTopOf="@+id/button44" />

    <Button
        android:id="@+id/button53"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button43"
        app:layout_constraintTop_toTopOf="@+id/button43" />

    <Button
        android:id="@+id/button51"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button41"
        app:layout_constraintTop_toTopOf="@+id/button41" />

    <Button
        android:id="@+id/button31"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintTop_toTopOf="@+id/button35" />

    <Button
        android:id="@+id/button15"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintTop_toTopOf="@+id/button25" />

    <Button
        android:id="@+id/button13"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintTop_toTopOf="@+id/button23" />

    <Button
        android:id="@+id/button11"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintTop_toTopOf="@+id/button21" />

    <Button
        android:id="@+id/button21"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintTop_toTopOf="@+id/button31" />

    <Button
        android:id="@+id/button22"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button12"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22" />

    <Button
        android:id="@+id/button42"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button52"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/button42"
        app:layout_constraintTop_toTopOf="@+id/button42" />

    <Button
        android:id="@+id/button32"
        android:layout_width="72dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button31"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Monday"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintStart_toStartOf="@+id/button15" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="@+id/button21"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/textview6"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/reduce"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiddle_class"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="39dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:text="@string/right"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/button26"
        android:layout_width="39dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:text="@string/left"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>